--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.username:root
+spring.datasource.username=root
 spring.datasource.password=azim@mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
